remove navbar and fix spacing with profile photo

--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -71,11 +71,7 @@
 .nameplate {
   color: white;
   font-size: 50px;
-  position: absolute;
-  top: 45%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-
+  padding-top: 200px;
   font-family: "Lucida Console", Monaco, monospace;
   letter-spacing: 2.2px;
   word-spacing: -10px;
@@ -89,11 +85,6 @@
 .subplate-text {
   color: white;
   font-size: 20px;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-
   font-family: "Lucida Console", Monaco, monospace;
   letter-spacing: 2.2px;
   word-spacing: 0px;
@@ -107,11 +98,9 @@
 .profile-photo {
   border-radius: 50%;
   border: 2px solid #000000;
-  width: 25%;
+  width: 500px;
   height: auto;
-  position: absolute;
-  top: 58%;
-  left: 37.5%;
+  margin-top: 75px;
   filter: grayscale(100%);
 }
 
